v22.10/en/_sources/interfaces.rst.txt
Interfaces

The following interfaces are provided for configuring and obtaining
data from the

rc_cube

:

Web GUI\:(Section \ref{webgui:sect-web-gui})  Easy-to-use graphical
interface to configure the rc_cube, do calibrations, view live images,
do service calls, visualize results, etc.

GigE Vision 2.0/GenICam\:(Section \ref{gigevision:sect-genicam})
Images and camera related configuration.

REST API\:(Section \ref{rest_api:sect-rest-api})  API to configure the
rc_cube, query status information, do service calls, etc.

Ethernet KRL Interface (EKI)\:(Section \ref{eki:sect-eki})  API to
configure the rc_cube and do service calls from KUKA KSS robots.

gRPC image stream\:(Section \ref{grpc:sect-grpc})  Stream synchronized
image sets via gRPC.

Time synchronization\:(Section \ref{time_sync:sect-time-sync})  Time
synchronization between the rc_cube and the application host.

