v26.04/en/_sources/interfaces.rst.txt
Interfaces

The following interfaces are provided for configuring and obtaining
data from the

rc_cube

:

Web GUI\:(Section \ref{webgui:sect-web-gui})  Easy-to-use graphical
interface to configure the rc_cube, do calibrations, view live images,
do service calls, visualize results, etc.

REST-API interface\:(Section \ref{rest_api:sect-rest-api})  API to
configure the rc_cube, query status information, do service calls,
etc.

Generic Robot Interface\:(Section \ref{gri:sect-gri})  TCP socket
communication interface for configuring the rc_cube and for service
calls.

OPC UA interface\:(Section \ref{opc_ua:sect-opc-ua})  OPC UA interface
for configuring the rc_cube and for service calls.

KUKA Ethernet KRL Interface\:(Section \ref{eki:sect-eki})  API to
configure the rc_cube and do service calls from KUKA KSS robots.

GigE Vision 2.0/GenICam\:(Section \ref{gigevision:sect-genicam})
Images and camera related configuration.

gRPC image stream interface\:(Section \ref{grpc:sect-grpc})  Stream
synchronized image sets via gRPC.

Time synchronization\:(Section \ref{time_sync:sect-time-sync})  Time
synchronization between the rc_cube and the application host.

